# aws-lambda-secrets-wrapper-rs

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  secrets-wrapper
.github/workflows/: audit-lint-bump.yml  audit-lint.yml  release.yml
src/: main.rs
