[package]
name = "aws-lambda-secrets-wrapper-rs"
description = "Securely retrieve AWS Lambda secrets at runtime."
authors = ["PsypherPunk <psypherpunk+github@gmail.com>"]
version = "0.4.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PsypherPunk/aws-lambda-secrets-wrapper-rs"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
aws-config = "0.55.2"
aws-sdk-secretsmanager = "0.28.0"
eyre = "0.6.8"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
